integrated uDig 1.2.0